samples/_failures_safe/1761209807_63edac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48ff5c34.c: In function ‘main’:
./samples/SAFE/__tmp_48ff5c34.c:149:21: error: expected declaration or statement at end of input
  149 |                     printf("Matrix A + B:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_48ff5c34.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_48ff5c34.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_48ff5c34.c:149:21: error: expected declaration or statement at end of input
